change iabstractbasemethods for proper external use Case: SVY-1311